Update bot activity, key path